# calculator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile.txt  README.md  pyproject.toml
.github/workflows/: ci.yml
calculator/: __init__.py  ast_nodes.py  constants.py  core.py  evaluator.py  exceptions.py  functions.py  parser.py  tokenizer.py
tests/: conftest.py  test_additional.py  test_basic.py  test_edge.py  test_extra_coverage.py  test_functions.py  test_variables.py
